# OxiBlog

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/short_for_actix/: Cargo.toml
app/short_for_actix/src/: lib.rs
app/src/: controllers.rs  handlers.rs  main.rs  middlewares.rs  routes.rs
app/src/controllers/: articles.rs  home.rs  search.rs  share.rs  users.rs
app/src/handlers/: h_articles.rs  h_home.rs  h_users.rs
db/: .env  Cargo.toml
db/migrations/2018-10-16-091029_crate_all_tables/: up.sql
db/restriction_for_diesel/: Cargo.toml
db/restriction_for_diesel/src/: lib.rs
db/src/: lib.rs  models.rs
db/src/models/: m_articles.rs  m_categories.rs  m_comments.rs  m_pages.rs  m_tags.rs  m_tags_with_articles.rs  m_users.rs
public/css/: main.css
view/: Cargo.toml
view/src/: views.rs
view/src/views/: v_articles.rs  v_home.rs  v_search.rs
view/templates/: articles_edit.html  articles_index.html  articles_new.html  articles_show.html  base.html  footer.html  header.html  home_index.html  pagination.html  search_index.html  users_login.html
